# mx-8004

./: .gitignore  Cargo.toml  README.md  mxpy.json
common/src/: cross_contract.rs  structs.rs
docs/: specification.md
docs/plans/: 2026-02-02-mx8004-implementation.md  2026-02-02-mx8004-improvements.md
escrow/: SPECIFICATION.md
escrow/src/: errors.rs  events.rs  lib.rs  storage.rs
identity-registry/: Cargo.toml  multiversx.json  sc-config.toml
identity-registry/interactor/: Cargo.toml
identity-registry/src/: events.rs  lib.rs  storage.rs  utils.rs  views.rs
identity-registry/tests/: identity_registry_blackbox_test.rs  identity_registry_test.rs
identity-registry/wasm/: Cargo.toml
identity-registry/wasm/src/: lib.rs
proxies/: Cargo.toml
proxies/src/: identity_registry_proxy.rs  lib.rs  (+2 more)
reputation-registry/: Cargo.toml  sc-config.toml
reputation-registry/interactor/src/: interact.rs
reputation-registry/src/: config.rs  errors.rs  events.rs  identity_registry_proxy.rs  lib.rs  storage.rs  utils.rs  validation_registry_proxy.rs
reputation-registry/tests/: access_control_test.rs  authenticity_loop_test.rs  reputation_registry_test.rs
reputation-registry/wasm/: Cargo.toml
reputation-registry/wasm/src/: lib.rs
scenarios/: authenticity_loop.scen.json  failing_storage_sync.scen.json  identity_full_flow.scen.json  init_payment_verified_flow.scen.json  simple.scen.json  validation_full_flow.scen.json
tests/: scenario_rs_test.rs
tests/src/: setup.rs  (+2 more)
validation-registry/: Cargo.toml  sc-config.toml
validation-registry/wasm/: Cargo.toml
validation-registry/wasm/src/: lib.rs
(+15 files in other folders)
