[package]
name = "reputation-registry-wasm"
version = "0.1.0"
authors = ["Antigravity"]
edition = "2021"
publish = false

[dependencies.reputation-registry]
path = ".."

[dependencies.multiversx-sc-wasm-adapter]
version = "0.54.0"

[lib]
name = "reputation_registry_wasm"
path = "src/lib.rs"
crate-type = ["cdylib"]
